FIX: tabs hidden on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,11 @@ body {
     background: #0a0a0a;
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  scrollbar-width: none;
+}
